# nufft_testing

./: CMakeLists.txt  README.md  homebrew.cmake  main.cpp
